// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1yzjkte"
          >
            <div>
              <input
                className="css-1h8uoiz"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-13t0mtv"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-eth9wb"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-13t0mtv"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                iconName="search"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1u3ljqn"
          >
            <div>
              <input
                className="css-lvtqsv"
                disabled={false}
                placeholder="Label "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1u3ljqn"
          >
            <div>
              <input
                className="css-1b4mpot"
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1wxpe8h"
          >
            <div
              className="css-94u0u-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-isy7x3-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-f2fep9"
        >
          <div
            className="css-1wxpe8h"
          >
            <div
              className="css-94u0u-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-12o4mty"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-isy7x3-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1u60tye"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1toli7u"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-14y2it5"
        >
          <div
            className="css-1wxpe8h"
          >
            <div>
              <input
                className="css-12o4mty"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1yedgls-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-1ymimxp"
            >
              <div
                className="css-1wxpe8h"
              >
                <div>
                  <input
                    className="css-12o4mty"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-1vhmgww"
            >
              <div
                className="css-1wxpe8h"
              >
                <div>
                  <input
                    className="css-12o4mty"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-7k8z76"
            >
              <div
                className="css-1wxpe8h"
              >
                <div>
                  <input
                    className="css-12o4mty"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-1ymimxp"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-1vhmgww"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-7k8z76"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-isy7x3-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-9ax7lg"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-szec59"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-1aoir3w"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-szec59"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-1uj7jtz"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-szec59"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-hnerwf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-13t0mtv"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1dpr4qv"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-f2fep9"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1dpr4qv"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-eth9wb"
            >
              <div
                className="css-1yzjkte"
              >
                <div>
                  <input
                    className="css-1h8uoiz"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1yedgls-Label"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1dpr4qv"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <span
                className="css-18ctimf-Icon"
              />
            </span>
            Error in Text Field
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
